240417 - register and login jwt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,10 @@ spring.datasource.password = password
 spring.datasource.driver-class-name = org.postgresql.Driver
 
 #jpa will automatically create all tables for you if updated
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 #see sql commands in terminal
 spring.jpa.show-sql = true
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-security.jwt.token.secret-key=my-secret
