240505 - rewrite login and register based on dao

--- a/pom.xml
+++ b/pom.xml
@@ -92,9 +92,14 @@
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>com.cookbook</groupId>
+            <artifactId>api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
