--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,11 @@
             <artifactId>js-cookie</artifactId>
             <version>2.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.2</version>
+        </dependency>
 
     </dependencies>
 
